k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-demo-service
spec:
  type: LoadBalancer
  selector:
    app: otel-demo
  ports:
    - port: 80
      targetPort: 8080
